--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@ font-family: 'Allura', cursive;
     font-size: 10px;
 }
 
-.head {
+section.head {
     display: flex;
     flex-direction: column;
 }
 
-aside {
+aside.head_aside {
     display: none;
 }
 
-nav {
+nav.head_nav {
     display: flex;
     position: fixed;
     background-color: rgba(255, 255, 255, 0.3);
@@ -63,8 +63,11 @@ li:nth-of-type(1) {
 }
 
 a {
-    padding: 15px;
     text-decoration: none;
+}
+
+nav ul li a {
+    padding: 15px;
     color: whitesmoke;
     font-size: 2rem;
     text-shadow: 1px 1px 10px black;
@@ -85,7 +88,7 @@ nav.active a {
     color: black;
 }
 
-.header {
+header.head_header {
     height: 100vh;
     width: 100%;
     background-image: url(img/header1.jpg);
@@ -95,7 +98,7 @@ nav.active a {
     filter: opacity(0.95);
 }
 
-.quotation {
+div.quotation {
     background-color: rgba(245, 245, 245, 0.3);
     position: absolute;
     text-align: center;
@@ -122,22 +125,93 @@ p.quoteAuthor {
     font-size: 2rem;
 }
 
-div.arrow {
+div.cta {
     position: absolute;
-    bottom: 60px;
+    bottom: 90px;
     left: 50%;
-    font-size: 4rem;
     transform: translate(-50%, 0);
     transition: 0.8s;
 }
 
-.arrow img {
-    transition: .6s;
+a.head_cta--a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    font-size: 20px;
+    color: black;
+    text-align: center;
+    text-transform: uppercase;
+    border-top: 1.5px solid black;
+    border-bottom: 1.5px solid black;
+    /* border-radius: 20px; */
+    padding: 2rem;
+    animation: bouncy 6s infinite linear;
+    transition: color .2s;
 }
 
-.arrow img:hover {
-    box-shadow: 0.3vmin -0.3vmin 0 white;
+a.head_cta--a span {
+    display: block;
 }
+
+a.head_cta--a:hover {
+    /* background-color: #000; */
+    color: white;
+    border: 1.5px solid black;
+}
+
+
+@keyframes bouncy {
+    0% {
+        top: 0em
+    }
+
+    30% {
+        top: 0em
+    }
+
+    33% {
+        top: -1em
+    }
+
+    36% {
+        top: 0em
+    }
+
+    38% {
+        top: -0.4em
+    }
+
+    40% {
+        top: 0em
+    }
+
+    80% {
+        top: 0em;
+    }
+
+    83% {
+        top: -0.9em
+    }
+
+    86% {
+        top: 0em
+    }
+
+    88% {
+        top: -0.4em
+    }
+
+    90% {
+        top: 0em
+    }
+
+    100% {
+        top: 0em;
+    }
+}
+
 
 
 
@@ -146,48 +220,12 @@ div.arrow {
 
 section.offer {
     flex-direction: column;
-    /* height: 100vh; */
     align-items: center;
     overflow: hidden;
 }
 
-div.about-photo-text h3 {
-    color: rgb(175, 168, 147);
-    font-size: 2.5rem;
-    text-align: center;
-    padding-top: 20px;
-    font-family: 'Quicksand', sans-serif;
-}
 
-
-/* div.offer-button button  */
-/* button {
-    margin: 30px 0;
-    padding: 10px;
-    background: linear-gradient(135deg, rgb(151, 144, 141) 0%, rgb(147, 139, 132) 0%, rgb(168, 164, 154) 0%, rgb(216, 214, 212) 100%);
-    border: 1px solid white;
-    font-family: 'Quicksand', sans-serif;
-    color: black;
-    cursor: pointer;
-    font-size: 18px;
-    transition: linear .3s;
-    text-transform: uppercase;
-} */
-
-/* button:hover {
-    color: whitesmoke;
-    background: linear-gradient(135deg, rgb(80, 79, 78) 0%, rgb(88, 88, 87) 0%, rgb(211, 209, 206) 0%, rgb(97, 91, 85) 100%);
-    border: 1px solid white;
-} */
-
-
-
-
-
-/* VERSION 2 */
-
-
-div.wrap {
+div.offer_wrap {
     display: flex;
     height: 95vh;
     width: 65%;
@@ -208,7 +246,7 @@ section.offer h3 {
     letter-spacing: 2px;
 }
 
-div.oferta {
+div.offer_wrap_offer {
     height: 70%;
     width: 30%;
     margin: 0 40px;
@@ -220,7 +258,7 @@ div.oferta {
     overflow: hidden;
 }
 
-a.oferta {
+a.a-offer {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -234,16 +272,16 @@ a.oferta {
     text-align: center;
     text-shadow: none;
     color: black;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.38);
     transition: 0.8s;
     overflow: hidden;
 }
 
-a.oferta:hover {
+a.a-offer:hover {
     background-color: rgba(255, 255, 255, 1);
 }
 
-a.oferta p {
+p.txt-offer {
     position: relative;
     top: 40%;
     left: 0;
@@ -252,11 +290,11 @@ a.oferta p {
     overflow: hidden;
 }
 
-a.oferta:hover p {
-    transform: scale(1);
+a.a-offer:hover p {
+    transform: scale(2);
 }
 
-div.oferta h2 {
+div.offer_wrap_offer h2 {
     position: relative;
     top: 75%;
     left: 0;
@@ -268,15 +306,15 @@ div.oferta h2 {
     text-transform: uppercase;
 }
 
-div.oferta-1 {
+div.offer-1 {
     background-image: url(img/narz-1.jpg);
 }
 
-div.oferta-2 {
+div.offer-2 {
     background-image: url(img/slub-1.jpg);
 }
 
-div.oferta-3 {
+div.offer-3 {
     background-image: url(img/rocz-1.jpg);
 }
 
@@ -294,7 +332,7 @@ section.about {
     font-family: 'Quicksand', sans-serif;
 }
 
-div.about-us,
+div.about_us,
 div.contact {
     width: 100%;
     flex-basis: 100%;
@@ -302,19 +340,13 @@ div.contact {
     flex-direction: column;
 }
 
-.about-photo-text {
-    /* background-image: url("img/aparat.jpg"); */
-    /* background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-color: rgba(255, 255, 255, 0.4); */
+div.about_us--text {
     background-color: lightgray;
     background-blend-mode: screen;
-    /* background-position: 0 center;
-    background-size: cover; */
 }
 
 
-div.about-photo-text h3,
+div.about_us--text h3,
 div.contact-info h3,
 div.card h3 {
     color: black;
@@ -325,21 +357,30 @@ div.card h3 {
 
 }
 
-.about-photo-text p {
+.about_us--text p {
     z-index: 1;
     position: relative;
     text-align: center;
     width: 75%;
     margin: 40px auto 0 auto;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     font-size: 2rem;
     letter-spacing: 1.5px;
     line-height: 200%;
     mix-blend-mode: hard-light;
-    color: white;
+    color: black;
 }
 
+p.description {
+    display: flex;
+    justify-content: baseline;
+}
 
+span.left,
+span.right {
+    width: 50%;
+    align-self: center;
+}
 
 
 
@@ -347,13 +388,14 @@ div.card h3 {
 section.card {
     display: flex;
     justify-content: center;
-    margin: 50px 0;
+
 }
 
 div.card {
     width: 50%;
     text-align: center;
     height: 100%;
+    margin: 50px 0;
 }
 
 div.card h3 {
